examples/good/8_builtin_functions.xp
boolList = [True, False, True, False];

intList = [1, 0, 1, 0];

boolToInt lst =
    if empty lst then [] else
    (if head lst then 1 else 0) : boolToInt (tail lst);

main = boolToInt boolList == intList;
