examples/bad/tail_of_empty_list.xp
main = tail (tail [1])
